--- a/prgm4/prgm4a.html
+++ b/prgm4/prgm4a.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Program 4</title>
+    <title>Program 4</title>
 </head>
 <body>
-	<script type="text/javascript">
-		var str1 = prompt("Enter the string");
-		str = str1.toUpperCase();
-		for (var i = 0; i < str.length; i++) {
-			var ch = str.charAt(i);
-			if (ch == 'A' || ch == 'E' || ch == 'I' || ch == 'O' || ch == 'U' ){
-				document.write("Given string is : " + str1 + '<br>');
-				document.write("Leftmost index of the of the vowel is : "+(i+1));
-				break;
-			}
-		}
-	</script>
+<script type="text/javascript">
+    let str1 = prompt("Enter the string");
+    let str2 = str1.toUpperCase();
+    for (let i = 0; i < str2.length; i++) {
+        let ch = str2.charAt(i);
+        if (ch === 'A' || ch === 'E' || ch === 'I' || ch === 'O' || ch === 'U') {
+            document.write("Given string is : " + str1 + '<br>');
+            document.write("Leftmost index of the of the vowel is : " + (i + 1));
+            break;
+        }
+    }
+</script>
 </body>
 </html>
